Fixed text overflowing outside of view. Modal now resets after submit. Modal can now be exited with 'ESC' and by clicking outside of it.

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -68,6 +68,10 @@ img {
   border-radius: 15px;
 }
 
+.fa-bars {
+  color: #ff0000;
+}
+
 .topnav a.active {
   background-color: #ff0000;
   color: #ffffff;
@@ -109,18 +113,6 @@ img {
     float: none;
     display: block;
     text-align: left;
-  }
-}
-
-@media screen and (max-width: 540px) {
-  .topnav a {
-    display: none;
-  }
-
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
   }
 }
 
@@ -654,4 +646,32 @@ footer {
     display: unset;
   }
 
+  .hero-headline {
+    /* font-size: 40px; */
+    font-size: 10vw;
+    white-space: normal;
+    max-width: 85vw;
+  }
+
+  .hero-text {
+    width: unset;
+    font-size: 13px;
+    margin-top: 17px;
+    max-width: 85vw;
+  }
+
+  .btn-signup {
+    font-size: 14px;
+  }
+
+  .hero-content {
+    padding: 0;
+  }
+
+}
+
+@media screen and (max-width: 357px) {
+  .hero-section {
+    margin-top: 150px;
+  }
 }
